package de.dhbwkarlsruhe.modellbahn.schemes;

public enum Direction {
	SAME,
	FORWARD,
	BACKWARD,
	SWITCH,
	REQUEST //
}