package de.dhbwkarlsruhe.modellbahn.schemes;

public enum Priority {
    BEFEHLE,
    STOP,
    MELDUNG,
    ANHALTEN,

}
